feat: stream, flatMap 추가